--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -96,5 +96,5 @@ jobs:
          docker run -d -p 8080:8080 --ipc="host" --name=mltest -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_REGION=${{ secrets.AWS_REGION }}'  ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
       - name: Clean previous images and containers
         run: |
-         docker rmi -f $(docker images -aq)
+         docker stop $(docker ps -a -q) $(docker rm $(docker ps -a -q))
          
