--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,12 +89,12 @@ jobs:
       # - name: Stop and remove  container if running
       #   run: |
       #    docker ps -q --filter "name=mltest" | grep -q . && docker stop mltest && docker rm -fv mltest
-      #- name: Clean previous images and containers
-       # run: |
-        # docker stop $(docker ps -a -q)
-      #- name: Clean previous images and containers again
-       # run: |
-        # docker rm $(docker ps -a -q) 
+      - name: Stop previous images and containers
+        run: |
+         docker stop $(docker ps -a -q)
+      - name: Clean previous images and containers again
+        run: |
+         docker rm $(docker ps -a -q) 
       - name: Run Docker Image to serve users
         run: |
          docker run -d -p 8080:8080 --ipc="host" --name=mltest -e 'AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}' -e 'AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}' -e 'AWS_REGION=${{ secrets.AWS_REGION }}'  ${{secrets.AWS_ECR_LOGIN_URI}}/${{ secrets.ECR_REPOSITORY_NAME }}:latest
