--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,10 +63,9 @@ jobs:
           echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
           
           
-          
   Continuous-Deployment:
     needs: build-and-push-ecr-image
-    runs-on: solar
+    runs-on: self-hosted
     steps:
       - name: Checkout
         uses: actions/checkout@v3
