--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -89,10 +89,10 @@ jobs:
       # - name: Stop and remove  container if running
       #   run: |
       #    docker ps -q --filter "name=mltest" | grep -q . && docker stop mltest && docker rm -fv mltest
-      - #name: Stop previous images and containers
+      #- name: Stop previous images and containers
         #run: |
          #docker stop $(docker ps -a -q)
-      - #name: Clean previous images and containers again
+      #- name: Clean previous images and containers again
         #run: |
         # docker rm $(docker ps -a -q) 
       - name: Run Docker Image to serve users
